добавлены изменения в booking